[package]
name = "sql-connect"
version = "0.1.0"
authors = ["Timothée Haudebourg <timothee.haudebourg@irisa.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libsqlite3-sys = "*"
# backoff-futures = "*"
backoff = "*"
futures = "*"
futures-timer = "*"
pin-utils = "*"
